samples/_failures_safe/1761277576_fe39b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf1e1e50.c: In function ‘main’:
./samples/SAFE/__tmp_bf1e1e50.c:165:17: error: expected declaration or statement at end of input
  165 |                 result = compress_none(test_data, data_size);
      |                 ^~~~~~
./samples/SAFE/__tmp_bf1e1e50.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf1e1e50.c:165:17: error: expected declaration or statement at end of input
